# rl-enzyme-engineering

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  README.md  alphaflow-environment.yaml  alphaflow-requirements.txt  conf.yaml  evodiff-requirements.txt  example_finetune_script.sh  fetch-enzymes.py  l1evodiff  ligand_out.pdbqt  load-enzymes-from-fasta.py  protein-ligand.py  pyproject.toml  rclone.conf  requirements-310.txt  requirements.txt  sync-datasets.py
.devcontainer/: Dockerfile  devcontainer.json  sync-datasets.py
analysis/: corrupt-restore.py  corrupt_restore.py  low_to_high_affinity.py  my_sequences.fasta  protein-ligand.py  results.csv  rl.py  wildtype.fasta
conf/: conf_dev.yaml
config/: config640M.json
docs/: implementation.md
flyio/: Dockerfile.cuda  entrypoint.sh  fly.toml  init.py
lora_pytorch/modules/: conv.py
models-tests/alphaflow/: environment.yaml
multi_agent/ProteinSequencePolicy/: evodiff_inference.py  fsa.py
results/: analys.py  rl.py
single_agent/: crossattention_graph_net.py  gumbel_softmax_distribution.py  plm_ppo_policy.py  top_sequences_tracker.py  trainer.py
single_agent/ProteinLigandGym/: protein_ligand_gym_v0.py
single_agent/agent/: gumbel_softmax_distribution.py  plm_ppo_policy.py
single_agent/env/: bind_inference.py  protein_ligand_gym_env.py
src/: alphaflow_inference.py  crossattention_graph_net.py  custom-graph-net-2.py  custom-graph-net.py  custom_graph_net.py  custom_graph_net_3.py  enzyme-gym-test.py  fabind_pipeline_dataset.py  fabind_plus.py  main.py  single-loop.py
src/EnzymeGym/: __init__.py  (+5 more)
(+83 files in other folders)
